blog post layout

--- a/src/posts/1 copy 2/1.md
+++ b/src/posts/1 copy 2/1.md
@@ -6,4 +6,12 @@ tags:
  - WebComponents
 ---
 
-Some shit
+# Some stuff
+
+```javascript
+alert('Execute the code')
+```
+
+```javascript
+alert('Execute the code')
+```
