--- a/src/posts/aaaaaaaaa/1.md
+++ b/src/posts/aaaaaaaaa/1.md
@@ -18,9 +18,9 @@ This is some stuff all about howfeeeedjijie
 ## Some stuff
    </div>
 
+Hello world
 
-
-![foo](img/Blogimg.png)
+![foo](images/Blogimg.png)
 
 
 ```js
