social media share first pass

--- a/src/404.md
+++ b/src/404.md
@@ -1,11 +1,11 @@
 ---
-layout: layouts/index.njk
+layout: layouts/generic.njk
 permalink: 404.html
 eleventyExcludeFromCollections: true
 ---
 # Content not found.
 
-Go <a href="{{ '/' | url }}">home</a>.
+Head <a href="{{ '/' | url }}">home</a>.
 
 {% comment %}
 Read more: https://www.11ty.dev/docs/quicktips/not-found/
