--- a/src/404.md
+++ b/src/404.md
@@ -5,8 +5,9 @@ eleventyExcludeFromCollections: true
 ---
 # Content not found.
 
+<div style="margin-top:1rem">
 Head <a href="{{ '/' | url }}">home</a>.
-
+</div>
 {% comment %}
 Read more: https://www.11ty.dev/docs/quicktips/not-found/
 
